--- a/app.nw/css/b-landing-box.css
+++ b/app.nw/css/b-landing-box.css
@@ -15,7 +15,8 @@
     padding: 0;
 }
 
-.b-landing-box__message {
+.b-landing-box__message,
+.b-landing-box__icon {
     position: relative;
     padding: 0 10%;
     top: 50%;
@@ -24,4 +25,9 @@
     color: #8f9aa6;
     text-shadow: 0 1px 0 #fff;
     text-align: center;
+}
+
+.b-landing-box__icon {
+    font-size: 50px;
+    margin-top: -50px;
 }
