--- a/app.nw/css/b-getting-started.css
+++ b/app.nw/css/b-getting-started.css
@@ -6,6 +6,8 @@
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(244, 244, 244,1)), color-stop(100%,rgba(255, 255, 255,1))); /* Chrome,Safari4+ */
     background: -webkit-linear-gradient(top, rgba(244, 244, 244,1) 0%,rgba(255, 255, 255,1) 100%); /* Chrome10+,Safari5.1+ */
     background: linear-gradient(to bottom, rgb(244, 244, 244) 0%,rgba(255, 255, 255,1) 100%); /* W3C */
+
+    overflow-y: auto;
 }
 
 .b-getting-started__block {
@@ -23,7 +25,58 @@
     margin-bottom: 10px;
 }
 
+.b-getting-started__subtitle {
+    font-size: 16px;
+    margin-bottom: 20px;
+    margin-top: 30px;
+}
+
 .b-getting-started__description {
     font-size: 13px;
     color: #777;
+}
+
+.b-getting-started p {
+    margin-bottom: 20px;
+}
+
+.b-getting-started__help {
+    margin-bottom: 10px;
+    width: 70%;
+    text-align: left;
+    margin-left: 15%;
+    margin-bottom: 10px;
+}
+
+.b-getting-started__help:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
+
+.b-getting-started__help__icon {
+    float: left;
+    font-size: 32px;
+    color: #357ac8;
+
+    margin-right: 10px;
+}
+
+.b-getting-started__help .b-getting-started__description {
+    margin-bottom: 20px;
+    color: #555;
+}
+
+.b-getting-started__actions {
+    margin: 30px 0 150px 0;
+}
+
+@media all and (max-width: 800px) {
+    .b-getting-started__block {
+        width: 90%;
+        margin-left: 5%;
+    }
 }
