dragover style for sidebar landing box

--- a/app.nw/css/b-landing-box.css
+++ b/app.nw/css/b-landing-box.css
@@ -31,3 +31,7 @@
     font-size: 50px;
     margin-top: -50px;
 }
+
+.b-landing-box_state_dragover .b-landing-box__content {
+    border-color: #407EC8;
+}
