--- a/app.nw/index.css
+++ b/app.nw/index.css
@@ -223,6 +223,10 @@
 .b-landing-box__icon {
     font-size: 50px;
     margin-top: -50px;
+}
+
+.b-landing-box_state_dragover .b-landing-box__content {
+    border-color: #407EC8;
 }body, html {
     height: 100%;
 }
